Projet_GL/src/test/deca/codegen/valid/unprovided/ok/print_cast2.deca
// Description: print d'un cast 2
// Resultat attendu:  2.10000e+01


{
    print((float) (21));
}
