Projet_GL/src/test/deca/codegen/invalid/float_overflow.deca
//Overflow d'un float

{
    float gros = 32523452345634564563456323.0;
    while(true){
        gros=gros+gros;
    }

}
